Complete page for desktop sizing

--- a/index.html
+++ b/index.html
@@ -6,6 +6,71 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <!--Page Header-->
+    <header>
+      <div id="title">
+        <img src="./resources/content/logo.png">
+        <p>SECRET AGENT SUPPLY INC.</p>
+      </div>
+      <div id="label">
+        <div class="container">
+          <figure>
+            <p>NEW ARRIVAL</p>
+            <h1>SPORT BIKES AND MOTORCYCLES</h1>
+          </figure>
+        </div>
+      </div>
+      <nav>
+        <div class="container">
+          <span>Eyewear</span>
+          <span>Apparel</span>
+          <span>Gadgets</span>
+          <span>Vehicles</span>
+          <span>Classes</span>
+          <span>Contact</span>
+        </div>
+      </nav>
+    </header>
 
+    <!--Main Content-->
+    <main>
+
+      <!--Product Section-->
+      <section id="products">
+        <figure>
+          <img src="./resources/content/pen.png">
+          <p>Exploding Pen</p>
+        </figure>
+        <figure>
+          <img src="./resources/content/watch.png">
+          <p>Cellular Watch</p>
+        </figure>
+        <figure>
+          <img src="./resources/content/glasses.png" id="glasses">
+          <p>Thermal Glasses</p>
+        </figure>
+      </section>
+
+      <!--Info Section-->
+      <section id="info">
+        <figure>
+          <p>Location</p>
+          <p class="data">-47.346436, 84.32354</p>
+        </figure>
+        <figure class="blank">
+        </figure>
+        <figure>
+          <p>Hours</p>
+          <p class="data">0800 - 1800</p>
+        </figure>
+      <section>
+    </main>
+
+    <!--Page Footer-->
+    <footer>
+      <div class="container">
+        <p>Copyright Secret Agent Supply Inc.</p>
+      </div>
+    </footer>
   </body>
 </html>
