--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
       </div>
       <nav>
         <div class="container">
-          <span>Eyewear</span>
-          <span>Apparel</span>
-          <span>Gadgets</span>
-          <span>Vehicles</span>
-          <span>Classes</span>
-          <span>Contact</span>
+          <span class="large-screen">Eyewear</span>
+          <span class="large-screen">Apparel</span>
+          <span class="large-screen">Gadgets</span>
+          <span class="large-screen">Vehicles</span>
+          <span class="large-screen">Classes</span>
+          <span class="large-screen">Contact</span>
+          <span class="small-screen">Menu</span>
         </div>
       </nav>
     </header>
@@ -41,11 +42,11 @@
           <img src="./resources/content/pen.png">
           <p>Exploding Pen</p>
         </figure>
-        <figure>
+        <figure class="watch">
           <img src="./resources/content/watch.png">
           <p>Cellular Watch</p>
         </figure>
-        <figure>
+        <figure class="glasses">
           <img src="./resources/content/glasses.png" id="glasses">
           <p>Thermal Glasses</p>
         </figure>
